website/src/styles.css
@import 'tailwindcss';

@theme {
	--bar-size: 10vh;
	--main-size: 80vh;

	--avatar-size: 7vh;

	--color-std: var(--color-gray-950);
	--color-mid: var(--color-gray-500);
	--color-inv: var(--color-gray-50);
	--color-cta: var(--color-teal-500);

	--color-info: var(--color-blue-500);
	--color-success: var(--color-emerald-500);
	--color-warning: var(--color-amber-500);
	--color-error: var(--color-rose-500);

	--color-z0: var(--color-gray-100);
	--color-z1: var(--color-gray-200);
	--color-z2: var(--color-gray-300);
}

@utility input-h {
	@apply min-h-9;
}

@utility color-transition {
	@apply transition-colors duration-200 ease-in-out;
}
@utility move-transition {
	@apply transition-transform duration-350 ease-in-out;
}
@utility base-shadow {
	@apply shadow-xl;
}

@utility base-rounded {
	@apply rounded-sm;
}
@utility container-rounded {
	@apply rounded-md;
}

@utility title-text {
	@apply text-2xl md:text-3xl;
}
@utility subtitle-text {
	@apply text-xl md:text-2xl;
}
@utility base-text {
	@apply text-base md:text-lg;
}
@utility small-text {
	@apply text-sm md:text-base;
}

@layer base {
	body {
		@apply overflow-x-hidden bg-z0
		base-text text-std;
	}

	h1 {
		@apply font-extralight title-text;
	}
	h2 {
		@apply font-light subtitle-text;
	}

	button,
	input,
	textarea,
	select {
		@apply outline-none focus:ring-0;
	}
}

@layer components {
	.bars-container {
		@apply w-screen h-(--bar-size) bg-z2
		flex justify-center base-shadow;

		.header {
			@apply w-full max-w-7xl h-full p-5
			flex items-center gap-5;
		}
		.footer {
			@apply w-full max-w-7xl h-full p-5
			flex justify-center items-center gap-3;
		}
	}

	.link {
		@apply text-mid cursor-pointer
		hover:underline;
	}

	.toast-info {
		@apply bg-info/30;
	}
	.toast-success {
		@apply bg-success/30;
	}
	.toast-warning {
		@apply bg-warning/30;
	}
	.toast-error {
		@apply bg-error/30;
	}
}

